cmake_minimum_required(VERSION 3.14)

project(expressions LANGUAGES CXX)

add_executable(compound compound.cpp)
add_executable(declaration declaration.cpp)
add_executable(Fibonacci Fibonacci.cpp)
add_executable(iteration iteration.cpp)
add_executable(jump jump.cpp)
add_executable(namespaces namespaces.cpp)
add_executable(Prime Prime.cpp)
add_executable(selection selection.cpp)
