cmake_minimum_required(VERSION 3.20)

project(functions LANGUAGES CXX)

add_executable(allC all.cpp)
add_executable(argl argl.cpp)
add_executable(auto auto.cpp)
add_executable(cmdline cmdline.cpp)
add_executable(declarationF declaration.cpp)
add_executable(fold fold.cpp)
add_executable(functions functions.cpp)
add_executable(varadic varadic.cpp)
