cmake_minimum_required(VERSION 3.20)

project(expressions LANGUAGES CXX)

add_executable(copy copy.cpp)
add_executable(exception_alternatives exception_alternatives.cpp)
add_executable(exceptions exceptions.cpp)
add_executable(life life.cpp)
add_executable(move move.cpp)
add_executable(SimpleString SimpleString.cpp)
add_executable(timer timer.cpp)
add_executable(tracer tracer.cpp)
