cmake_minimum_required(VERSION 3.14)

project(expressions LANGUAGES CXX)

add_executable(bank bank.cpp)
add_executable(bank_exercise bank_exercise.cpp)
add_executable(mean mean.cpp)
add_executable(mode mode.cpp)
add_executable(SimpleUniquePointer SimpleUniquePointer.cpp)
add_executable(templates templates.cpp)
